--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "Server.js",
   "type": "module",
   "scripts": {
-    "start": "node Server.js"
+    "start": "nodemon Server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +12,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "tesseract.js": "^5.1.1"
   }
 }
