--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "Server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon Server.js"
+    "start": "node Server.js"
   },
   "keywords": [],
   "author": "",
